# svmplayer

./: CMakeLists.txt  README.md  main.cpp  sopcast.cpp  sopcast.h  svmplayer.cpp  svmplayer.h  svmplayer.kdev4
include/: sopcast.h  svm_assert.h  svmplayer.h  svmwindow.h
src/: sopcast.cpp  svmplayer.cpp  svmwindow.cpp
