cmake_minimum_required(VERSION 2.8)
project(svmplayer)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_executable(svmplayer src/svmwindow.cpp src/sopcast.cpp src/svmplayer.cpp main.cpp)
target_link_libraries (svmplayer vlc X11 pthread)
install(TARGETS svmplayer RUNTIME DESTINATION $ENV{HOME}/sopcast)
install(PROGRAMS sp-sc-auth DESTINATION $ENV{HOME}/sopcast)
install(FILES lib/libstdc++.so.5.0.1 lib/libstdc++.so.5 DESTINATION $ENV{HOME}/sopcast/lib)

include_directories(include)
add_subdirectory(include)
add_subdirectory(src)